--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,3 @@
 obj += main.o server.o
-obj += fd/fd.o fd/net/socket.o fd/net/endpoint.o
+obj += fd/fd.o fd/epoll.o
+obj += fd/net/socket.o fd/net/endpoint.o
