--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,3 @@
-obj += main.o server.o
+obj += main.o server.o client.o
 obj += fd/fd.o fd/epoll.o fd/event.o
 obj += fd/net/socket.o fd/net/endpoint.o
